# codelabs-build-ambient-agent-and-deploy-to-agent-runtime

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  agents-cli-manifest.yaml  prompt.md  pyproject.toml  shared_sessions.db
.github/workflows/: cleanup.yaml  deploy-dashboard.yaml  deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.semgrep/: rules.yaml
app/: agent.py  fast_api_app.py
artifacts/grade_results/: results_20260618_221026.html  results_20260618_221026.json  results_20260618_221128.html  results_20260618_221128.json
artifacts/traces/: generated_traces.json
deployment/terraform/cicd/: backend.tf  service_accounts.tf  telemetry.tf  variables.tf
deployment/terraform/cicd/vars/: env.tfvars
deployment/terraform/single-project/: backend.tf
docs/: deployment_operations.md  gcp_deployment_architecture.md  threat_model.md  troubleshooting.md
expense_agent/: agent.py  config.py  fast_api_app.py
scripts/: cleanup_gcp_assets.sh  cleanup_pubsub.sh  setup_pubsub.sh
submission_frontend/: README.md  main.py  prompt.md  pyproject.toml
submission_frontend/docs/: walkthrough.md
tests/eval/: eval_config.yaml  generate_traces.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py  test_agent_runtime_app.py  test_server_e2e.py
tests/load_test/: load_test.py
tests/unit/: test_manager_dashboard.py
